Issue #3256391: Drupal\Component\Plugin\Exception\PluginNotFoundException: The "field_item:text_long" plugin does not exist

--- a/modules/bibcite_entity/tests/bibcite_entity_test/bibcite_entity_test.info.yml
+++ b/modules/bibcite_entity/tests/bibcite_entity_test/bibcite_entity_test.info.yml
@@ -4,6 +4,7 @@ package: Bibliography & Citation
 dependencies:
   - bibcite
   - bibcite_entity
+  - text
 core: 8.x
 core_version_requirement: ^8 || ^9
 hidden: true
