--- a/modules/bibcite_export/tests/bibcite_export_test/bibcite_export_test.info.yml
+++ b/modules/bibcite_export/tests/bibcite_export_test/bibcite_export_test.info.yml
@@ -5,6 +5,7 @@ dependencies:
   - bibcite_entity_test
   - bibcite_export
   - bibcite_bibtex
+  - text
 core: 8.x
 core_version_requirement: ^8 || ^9
 hidden: true
