--- a/modules/bibcite_import/tests/bibcite_import_test/bibcite_import_test.info.yml
+++ b/modules/bibcite_import/tests/bibcite_import_test/bibcite_import_test.info.yml
@@ -7,6 +7,7 @@ dependencies:
   - bibcite_import
   - bibcite_ris
   - bibcite_bibtex
+  - text
 core: 8.x
 core_version_requirement: ^8 || ^9
 hidden: true
