--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,25 @@
     "source": "https://git.drupalcode.org/project/bibcite"
   },
   "require": {
-    "academicpuma/citeproc-php": "~1.0",
+    "seboettg/citeproc-php": "^2.1",
     "adci/full-name-parser": "^0.2.4",
     "technosophos/libris": "~2.0",
     "audiolabs/bibtexparser": "^1.0",
     "caseyamcl/php-marc21": "~1.0",
     "drupal/entity": "^1.0",
     "drupal/token": "^1.0"
+  },
+  "scripts": {
+    "csl-vendors": [
+      "vendor/seboettg/citeproc-php/install.sh styles-distribution",
+      "vendor/seboettg/citeproc-php/install.sh locales"
+    ],
+    "post-install-cmd": [
+      "@csl-vendors"
+    ],
+    "post-update-cmd": [
+      "@csl-vendors"
+    ]
   },
   "suggest": {
     "drupal/bibcite_migrate": "Migrate your bibliographic data from the Bibliography (biblio) module",
