--- a/bibcite.services.yml
+++ b/bibcite.services.yml
@@ -12,6 +12,7 @@ services:
     class: Drupal\bibcite\HumanNameParser
   bibcite.help_service:
     class: Drupal\bibcite\HelpService
+    arguments: ['@extension.list.module', '@language_manager']
   bibcite.format_param_converter:
     class: Drupal\bibcite\Routing\FormatConverter
     arguments: ['@plugin.manager.bibcite_format']
