Issue #3362383: Value of core_version_requirement: ^8 || ^9 is not compatible with the next major version of Drupal core

--- a/bibcite.info.yml
+++ b/bibcite.info.yml
@@ -2,7 +2,7 @@ name: Bibliography & Citation
 type: module
 description: Basic API for working with bibliographic data
 core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 package: Bibliography & Citation
 configure: bibcite.settings
 dependencies:
