--- a/modules/bibcite_entity/tests/bibcite_entity_test/bibcite_entity_test.info.yml
+++ b/modules/bibcite_entity/tests/bibcite_entity_test/bibcite_entity_test.info.yml
@@ -6,5 +6,5 @@ dependencies:
   - bibcite_entity
   - text
 core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 hidden: true
