--- a/modules/bibcite_export/tests/bibcite_export_test/bibcite_export_test.info.yml
+++ b/modules/bibcite_export/tests/bibcite_export_test/bibcite_export_test.info.yml
@@ -7,5 +7,5 @@ dependencies:
   - bibcite_bibtex
   - text
 core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 hidden: true
