--- a/modules/bibcite_bibtex/bibcite_bibtex.info.yml
+++ b/modules/bibcite_bibtex/bibcite_bibtex.info.yml
@@ -2,7 +2,7 @@ name: 'Bibliography & Citation - BibTeX'
 type: module
 description: BibTeX encode and decode format
 core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 package: 'Bibliography & Citation - Formats'
 dependencies:
   - bibcite:bibcite
