--- a/modules/bibcite_entity/bibcite_entity.info.yml
+++ b/modules/bibcite_entity/bibcite_entity.info.yml
@@ -3,7 +3,7 @@ type: module
 description: Storage for your bibliographic data.
 package: Bibliography & Citation
 core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 configure: bibcite_entity.reference.settings
 dependencies:
   - bibcite:bibcite
