--- a/modules/bibcite_ris/bibcite_ris.info.yml
+++ b/modules/bibcite_ris/bibcite_ris.info.yml
@@ -2,7 +2,7 @@ name: 'Bibliography & Citation - RIS'
 type: module
 description: RIS encode and decode format
 core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 package: 'Bibliography & Citation - Formats'
 dependencies:
   - bibcite:bibcite
